--- a/Clients/MVC-App/Views/Category/Details.cshtml
+++ b/Clients/MVC-App/Views/Category/Details.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<MVC_APP.ViewModels.CourseViewModel>
 @{
-    ViewData["Title"] = "Available Courses";
+    ViewData["Title"] = "Courses in category";
 }
 
 <h1 class="page-title">@ViewData["Title"]</h1>
