--- a/Clients/MVC-App/Views/Courses/Details.cshtml
+++ b/Clients/MVC-App/Views/Courses/Details.cshtml
@@ -1,4 +1,4 @@
-@model MVC_App.ViewModels.CourseViewModel
+@model MVC_APP.ViewModels.CourseViewModel
 
 <article class="course-detail">
   <h1 class="page-title">@Model!.Title</h1>
