--- a/Clients/MVC-App/Views/Shared/_Layout.cshtml
+++ b/Clients/MVC-App/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
         <ul>
             <li><a asp-controller="Home" asp-action="Index">Start</a></li>
             <li><a asp-controller="Courses" asp-action="Index">Courses</a></li>
-            <li><a href="#">Categories</a></li>
+            <li><a asp-controller="Category" asp-action="Index">Categories</a></li>
             <li><a href="#">Log In</a></li>
         </ul>
     </nav>
