--- a/Clients/MVC-App/Views/Shared/_Layout.cshtml
+++ b/Clients/MVC-App/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             <li><a asp-controller="Home" asp-action="Index">Start</a></li>
             <li><a asp-controller="Courses" asp-action="Index">Courses</a></li>
             <li><a asp-controller="Category" asp-action="Index">Categories</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a asp-controller="Authentication" asp-action="Index">Log In</a></li>
         </ul>
     </nav>
     <main>
